hw-detect (1.57) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Discard errors from grepping /sys/bus/pci/devices/*/class, in case
    /sys/bus/pci/devices exists but not the class files.

  [ Frans Pop ]
  * Various code and whitespace cleanups.

 -- Frans Pop <fjp@debian.org>  Sat, 10 Nov 2007 05:08:38 +0100

hw-detect (1.56) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Add missing "fi" in hw-detect.sh.
  * Fix debian-rules-ignores-make-clean-error lintian warning.

 -- Jérémy Bobbio <lunar@debian.org>  Sun, 30 Sep 2007 04:20:41 +0200

hw-detect (1.55) unstable; urgency=low

  [ Frans Pop ]
  * Only ask PCMCIA resource question at low priority as we've not seen any
    installation reports mentioning that issue in a long time.

  [ Joey Hess ]
  * Linux 2.6.22 renames the firewire bus and modules from "1394" to
    "firewire". Support the new module names.
  * While eth1394 is not currently being built for 2.6.22, go ahead and modify
    sysfs-update-devnames to recognise ethernet devices that point to
    /sys/bus/firewire as firewire ethernet.

  [ Updated translations ]
  * Bengali (bn.po) by Jamil Ahmed
  * Italian (it.po) by Stefano Canepa
  * Panjabi (pa.po) by A S Alam
  * Portuguese (pt.po) by Miguel Figueiredo
  * Vietnamese (vi.po) by Clytie Siddall
  * Simplified Chinese (zh_CN.po) by Ming Hua

 -- Joey Hess <joeyh@debian.org>  Fri, 28 Sep 2007 19:18:04 -0400

hw-detect (1.54) unstable; urgency=low

  [ Joey Hess ]
  * Remove cruft left over from the days of pcmcia-cs.
    - pcmciautils doesn't create a cardmgr.pid, so stop looking for it to
      determine if pcmcia is started. Look for the pcmcia_core module being
      loaded  instead.
    - No need for funky redirections when running the init script as it no
      longer starts a daemon.
    - /var/run/stab was only produced by pcmcia-cs, so the whole
      gen_pcmcia_devnames section can no longer run; remove.
    - Only modify config.opts in /target if pcmcia_resources is preseeded.