@@ -60,3 +60,9 @@ _Description: Load missing drivers from a driver floppy?
  A driver for your hardware is not available. You may need
  to load drivers from a driver floppy. If you have such a floppy
  available now, put it in the drive before continuing.
+
+# Temporary template to force old behavior of loading IDE modules by default
+Template: hw-detect/load-ide
+Type: boolean
+Default: false
+Description: for internal use; can be preseeded
