@@ -17,6 +17,11 @@ SUBARCH="$(archdetect)"
 
 finish_install=/usr/lib/finish-install.d/30hw-detect
 
+LOAD_IDE=""
+if db_get hw-detect/load-ide && [ "$RET" = true ]; then
+	LOAD_IDE=1
+fi
+
 if [ -x /sbin/depmod ]; then
 	depmod -a > /dev/null 2>&1 || true
 fi
@@ -142,24 +147,18 @@ get_ide_floppy_info() {
 	esac
 }
 
-# Modules that should load before autodetection.
-get_early_manual_hw_info() {
-	# Load explicitly rather than implicitly to allow the user to
-	# specify parameters when the module is loaded.
-	echo "ide-core:Linux IDE support"
-}
-	
 # Manually load modules to enable things we can't detect.
 # XXX: This isn't the best way to do this; we should autodetect.
 # The order of these modules are important.
 get_manual_hw_info() {
-	get_floppy_info
-	get_ide_chipset_info
-	echo "ide-generic:Linux IDE support"
-	get_ide_floppy_info
-	echo "ide-disk:Linux ATA DISK"
-	echo "ide-cd:Linux ATAPI CD-ROM"
-	echo "isofs:Linux ISO 9660 filesystem"
+	if [ "$LOAD_IDE" ]; then
+		get_floppy_info
+		get_ide_chipset_info
+		echo "ide-generic:Linux IDE support"
+		get_ide_floppy_info
+		echo "ide-disk:Linux ATA DISK"
+		echo "ide-cd:Linux ATAPI CD-ROM"
+	fi
 
 	# on some hppa systems, nic and scsi won't be found because they're
 	# not on a bus that udev understands ... 
@@ -202,7 +201,7 @@ fi
 # TODO: this just loads modules itself, rather than handing back a list
 update-dev
 
-ALL_HW_INFO=$(get_early_manual_hw_info; get_detected_hw_info; get_manual_hw_info)
+ALL_HW_INFO=$(get_detected_hw_info; get_manual_hw_info)
 db_progress STEP $OTHER_STEPSIZE
 
 # Remove modules that are already loaded or not available, and construct
